2009-01-07  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* INSTALL:
		Updated dependencies and build instructions.

2008-10-31  Wolfram Gloger  <video06@malloc.de>  (mr)

	* src/lavfmuxer.cpp:
		Use avcodec_decode_audio2 with newer ffmpeg.

	* src/avframe.cpp:
		Replace img_copy with av_picture_copy for newer ffmpeg.

	* configure.in:
		Add -I.../include/qt3 to CPPFLAGS.

2008-10-26  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/index.cpp:
		Fix writing of new index format.

2008-10-19  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
		Fix Windows build.

2008-10-19  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
		Fix Ubuntu compilation error.

2008-10-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/index.cpp:
		Disable generation of new index format for now.

2008-10-10  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcutbase.ui:
	* src/dvbcut.cpp:
	* src/index.cpp:
	* src/index.h:
	* src/mpgfile.h:
		Show picture related infos (slightly changed index format!)
 
2008-10-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpegmuxer.h:
	* src/mpegmuxer.cpp:
		Return false if writing fails.

2008-06-14  Michael Riepe  <too-tired@users.sourceforge.net>

	* configure.in:
		Improve ffmpeg/libswscale handling.
 
2008-06-14  Michael Riepe  <too-tired@users.sourceforge.net>

	* configure.in:
	* install-sh:
	* makefile.in:
	* mkinstalldirs:
	* src/Makefile.in:
		New files.

2008-05-18  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/main.cpp:
		Use size_t instead of unsigned int.

2008-03-31  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix Windows build (patch by Ralph Glasstetter).

2008-03-24  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
	* src/avframe.h:
	* src/lavfmuxer.cpp:
	* src/lavfmuxer.h:
	* src/main.cpp:
	* src/stream.h:
	* src/streamdata.h:
		Yet another ffmpeg interface change.
