@@ -1,5 +1,5 @@
 # makefile.in - top-level makefile template for Linux/Unix
-# Copyright (c) 2008 Michael Riepe
+# Copyright (c) 2008 - 2009 Michael Riepe
 #  
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -27,7 +27,7 @@ datadir = @datadir@
 mandir = @mandir@
 man1dir = $(mandir)/man1
 
-installdirs = $(mandir) $(man1dir)
+installdirs = $(DESTDIR)$(mandir) $(DESTDIR)$(man1dir)
 
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
@@ -40,7 +40,7 @@ all check install mostlyclean clean distclean maintainer-clean::
 all-local:
 check-local:
 install-local: $(installdirs) dvbcut.1
-	$(INSTALL_DATA) dvbcut.1 $(man1dir)/dvbcut.1
+	$(INSTALL_DATA) dvbcut.1 $(DESTDIR)$(man1dir)/dvbcut.1
 
 $(installdirs):
 	$(SHELL) $(top_srcdir)/mkinstalldirs $@
